# Auditorium

./: .gitignore  .swift-format  CHECKLIST.md  Cargo.toml  Justfile  Package.swift  README.md  SPEC.md  WORKFLOW.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml  release-package.yml
Auditorium.xcworkspace/: contents.xcworkspacedata
Auditorium/Auditorium.xcodeproj/: project.pbxproj
Auditorium/Auditorium.xcodeproj/xcshareddata/xcschemes/: Auditorium.xcscheme  AuditoriumUITests.xcscheme
Auditorium/Auditorium/App/: AppSceneID.swift  AuditoriumApp.swift  RootView.swift  ScreenshotExporter.swift  SidebarView.swift  WelcomeWindowConfigurator.swift
Auditorium/Auditorium/AppIcon.icon/: icon.json
Auditorium/Auditorium/Assets.xcassets/WelcomeBackground.imageset/: Contents.json
Auditorium/Auditorium/Assets.xcassets/WelcomeConceptReference.imageset/: Contents.json
Auditorium/Auditorium/Assets.xcassets/WelcomeMark.imageset/: Contents.json
Auditorium/Auditorium/DesignSystem/: Components.swift
Auditorium/AuditoriumTests/: AuditoriumTests.swift
Auditorium/AuditoriumUITests/: AuditoriumUITests.swift  AuditoriumUITestsLaunchTests.swift
Tests/AuditoriumCoreTests/: AuditoriumCoreTests.swift
config/: ExportOptions-developer-id.plist
docs/: RELEASE.md  SIGNING.md
docs/acceptance/: APP_REAL_FLOW_MARKER_1780830049.md  MANUAL_ACCEPTANCE.md  REAL_GITHUB_FLOW.md  REAL_GITHUB_FLOW_MARKER.md
script/: build_and_run.sh  export_screenshots.sh  package_release.sh
symphony/: Cargo.toml
symphony/src/: lib.rs  main.rs
symphony/tests/: cli.rs
(+84 files in other folders)
